# ethnicity-detection

./: .gitignore  README.md  setup.cfg
1. Own model/: CNN_ethnicity_detection.ipynb
src/dataset/: utkface_analyser.py
