[metadata]
name = ethnicity_detection
version = 1.0.0
author = Alain Afonso
#author_email =
description = Ethnicity detection with CNNs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alainpedro123/ethnicity-detection
license = MIT
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.9

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    opencv-python>=4.5.5,<5.0
	tensorflow>=2.8,<3.0
	matplotlib>=3.5.1,<4.0
    docopt>=0.6.2,<1.0

[options.packages.find]
where = src